2008-09-15  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (APC_sequence):
	new function - prepare to use APC sequences later

	* avatarsay.c (process_script, iscommand):
	better handling of [end] and [stop] commands

	* avatarsay.c (handle_avatarimage_command):
	don't move the avatar out

	* avatarsay.c (handle_image_command):
	just set the variable stop and don't exit

2008-09-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_inverse, avt_drawchar, avt_put_character):
	better handling of inverse characters

	* avtterm.c (OSC_sequence):
	new function - just skip OSC sequences for now

2008-09-12  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (CSI_sequence):
	support for changing the balloon size with an esc-sequence

	* avatarsay.c (get_user_home):
	for MinGW now uses HOMEDRIVE and HOMEPATH
	must be freed by the caller now
	(initialize_datadir): new function
	(run_shell): adapted

2008-09-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (first_archive_entry):
	support for multi-part archives
	(multi_menu, read_multi_entry): new funtions

	* avatarsay.c (first_archive_entry):
	new funtion - First archive entry must start with AKFAvatar-

2008-09-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c:
	script commands are to be enclosed in square brackets now

	* avatarsay.c (read_error_is_eof):
	reintroduced global variable
	(get_character, ask_manpage, open_script): adapted

	* avatarsay.c (ask_manpage, ask_edit_file):
	smaller textentry fields

	* avatar.c (avt_put_character):
	check the value of auto_margin before calling check_auto_margin

2008-09-09  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (execute_process, process_subprogram):
	moved the keyboard initialization to process_subprogram

	* avatarsay.c (menu):
	different balloon-size, no viewport anymore
	several other funtions adapted

	* avatarsay.c (ask_manpage):
	fix: clear file buffer

2008-09-08  Andreas K. Foerster  <info@akfoerster.de>
